дополнен и отредактирован сборник ссылок

--- a/informarch/aeroqsp_help_0026.html
+++ b/informarch/aeroqsp_help_0026.html
@@ -20,7 +20,7 @@
 Для всех элементов оформления рекомендуется использовать формат картинок PNG, с поддержкой альфа-канала (регулируемая прозрачность). Кроме этого, HTML-движок и оператор VIEW поддерживают анимированные GIF-файлы.
 
 </p>
-<a id="FЬPИ"></a><h3>Общие параметры</h3>
+<a id="иэmБ"></a><h3>Общие параметры</h3>
 <p>
 Здесь даётся список системных переменных для AeroQSP, которые отвечают за различные общие настройки.
 
@@ -93,7 +93,7 @@
 <strong>NEWLOC_EFFECT_SEQ</strong> — флаг, использовать последовательное наложение эффектов для перехода между локациями. Значение по-умолчанию: <span class="em_BLCK"><span class="emNUM">0</span></span>.
 
 </p>
-<a id="РтЦe"></a><h3>Параметры основного экрана</h3>
+<a id="эXРN"></a><h3>Параметры основного экрана</h3>
 <p>
 Здесь даётся список системных переменных для AeroQSP, которые отвечают за различные настройки основного экрана.
 
@@ -110,7 +110,7 @@
 <strong>INTEGRATED_ACTIONS</strong> — флаг, использовать совмещенный с основным описанием список действий. Значение по-умолчанию: <span class="em_BLCK"><span class="emNUM">0</span></span>.
 
 </p>
-<a id="ИеLq"></a><h4>Основное описание</h4>
+<a id="ИЁзN"></a><h4>Основное описание</h4>
 <p>
 <strong>MAINDESC_X</strong> — X-позиция основного описания. Значение по-умолчанию: <span class="em_BLCK"><span class="emNUM">4</span></span>.
 
@@ -135,7 +135,7 @@
 <strong>$MAINDESC_BACKIMAGE</strong> — фоновая картинка для основного описания. Значение по-умолчанию: <span class="em_BLCK"><span class="emTEXT">""</span></span>.
 
 </p>
-<a id="АшmЙ"></a><h4>Дополнительное описание</h4>
+<a id="шОгY"></a><h4>Дополнительное описание</h4>
 <p>
 <strong>STATDESC_X</strong> — X-позиция дополнительного описания. Значение по-умолчанию: <span class="em_BLCK"><span class="emNUM">596</span></span>.
 
@@ -160,7 +160,7 @@
 <strong>$STATDESC_BACKIMAGE</strong> — фоновая картинка для дополнительного описания. Значение по-умолчанию: <span class="em_BLCK"><span class="emTEXT">""</span></span>.
 
 </p>
-<a id="wjщW"></a><h4>Список действий</h4>
+<a id="QРВМ"></a><h4>Список действий</h4>
 <p>
 <strong>ACTIONS_X</strong> — X-позиция списка действий. Значение по-умолчанию: <span class="em_BLCK"><span class="emNUM">4</span></span>.
 
@@ -189,7 +189,7 @@
 <strong>$ACTIONS_BACKIMAGE</strong> — фоновая картинка для списка действий. Значение по-умолчанию: <span class="em_BLCK"><span class="emTEXT">""</span></span>.
 
 </p>
-<a id="ЯЫАX"></a><h4>Список предметов</h4>
+<a id="uYJД"></a><h4>Список предметов</h4>
 <p>
 <strong>OBJECTS_X</strong> — X-позиция списка предметов. Значение по-умолчанию: <span class="em_BLCK"><span class="emNUM">596</span></span>.
 
@@ -218,7 +218,7 @@
 <strong>$OBJECTS_BACKIMAGE</strong> — фоновая картинка для списка предметов. Значение по-умолчанию: <span class="em_BLCK"><span class="emTEXT">""</span></span>.
 
 </p>
-<a id="ИuПd"></a><h4>Строка ввода</h4>
+<a id="NдЗЗ"></a><h4>Строка ввода</h4>
 <p>
 <strong>USERINPUT_X</strong> — X-позиция строки ввода. Значение по-умолчанию: <span class="em_BLCK"><span class="emNUM">4</span></span>.
 
@@ -235,7 +235,7 @@
 <strong>USERINPUT_H</strong> — высота строки ввода. Значение по-умолчанию: <span class="em_BLCK"><span class="emNUM">28</span></span>.
 
 </p>
-<a id="ЛOSS"></a><h4>Окно изображения VIEW</h4>
+<a id="pщпД"></a><h4>Окно изображения VIEW</h4>
 <p>
 <strong>VIEW_X</strong> — X-позиция области картинки для оператора VIEW. Значение по-умолчанию: <span class="em_BLCK"><span class="emNUM">250</span></span>.
 
@@ -268,7 +268,7 @@
 <strong>$INPUT_BACKIMAGE</strong> — путь к фоновой картинке для диалога INPUT (задает размеры диалога). Значение по-умолчанию: <span class="em_BLCK"><span class="emTEXT">""</span></span>.
 
 </p>
-<a id="ФбAИ"></a><h3>Параметры диалога ввода INPUT</h3>
+<a id="чXgЛ"></a><h3>Параметры диалога ввода INPUT</h3>
 <p>
 Здесь даётся список системных переменных для AeroQSP, которые отвечают за различные настройки диалогового окна, вызываемого функцией <span class="em_BLCK"><span class="emFUNC">$INPUT</span></span>.
 
@@ -349,7 +349,7 @@
 <strong>INPUT_EFFECT_TIME</strong> — время эффекта для INPUT (в миллисекундах). Значение по-умолчанию: <span class="em_BLCK"><span class="emNUM">500</span></span>.
 
 </p>
-<a id="ovьD"></a><h3>Параметры диалога сообщения MSG</h3>
+<a id="Ьhлу"></a><h3>Параметры диалога сообщения MSG</h3>
 <p>
 Здесь даётся список системных переменных для AeroQSP, которые отвечают за различные настройки диалогового окна, вызываемого оператором <span class="em_BLCK"><span class="emOPRT">MSG</span></span>.
 
@@ -406,7 +406,7 @@
 <strong>MSG_EFFECT_TIME</strong> — время эффекта для MSG (в миллисекундах). Значение по-умолчанию: <span class="em_BLCK"><span class="emNUM">500</span></span>.
 
 </p>
-<a id="КОоg"></a><h3>Параметры меню MENU</h3>
+<a id="вRfМ"></a><h3>Параметры меню MENU</h3>
 <p>
 Здесь даётся список системных переменных для AeroQSP, которые отвечают за различные настройки всплывающего меню, которое появляется при использовании оператором <span class="em_BLCK"><span class="emOPRT">MENU</span></span>.
 
@@ -471,7 +471,7 @@
 <strong>MENU_EFFECT_TIME</strong> — время эффекта для MENU (в миллисекундах). Значение по-умолчанию: <span class="em_BLCK"><span class="emNUM">500</span></span>.
 
 </p>
-<a id="хaвт"></a><h3>Список эффектов (для $NEWLOC_EFFECT, $VIEW_EFFECT, $INPUT_EFFECT, $MSG_EFFECT, $MENU_EFFECT)</h3>
+<a id="ёDВа"></a><h3>Список эффектов (для $NEWLOC_EFFECT, $VIEW_EFFECT, $INPUT_EFFECT, $MSG_EFFECT, $MENU_EFFECT)</h3>
 <ul>
 <li>
 fade
@@ -534,7 +534,7 @@ wipe3
 wipe4
 </li>
 </ul>
-<a id="ЖчKЧ"></a><h3>Поддержка HTML</h3>
+<a id="sЕNF"></a><h3>Поддержка HTML</h3>
 <p>
 Текущая версия HTML-движка ориентирована на использование стилей, а не простых аттрибутов элементов.
 
@@ -698,17 +698,17 @@ background-color
 background-image
 </li>
 </ul>
-<a id="цvим"></a><h3>Встраиваемые шрифты</h3>
+<a id="ЮоЩэ"></a><h3>Встраиваемые шрифты</h3>
 <p>
 AeroQSP поддерживает встраивание шрифтов в игру. Для этого необходимо swf-файл со встроенным шрифтом положить в zip-архив игры (в любую папку). Использование встроенного шрифта аналогично использованию обычного системного шрифта - там, где необходимо, указывается его имя. При наличии в архиве игры хотя бы одного встроенного шрифта, использование системных шрифтов запрещено.
 
 </p>
-<a id="бжРн"></a><h3>Звуки и музыка</h3>
+<a id="фqРя"></a><h3>Звуки и музыка</h3>
 <p>
 Поддерживается воспроизведение MP3-файлов.
 
 </p>
-<a id="жНmW"></a><h3>Файл конфигурации</h3>
+<a id="йШжZ"></a><h3>Файл конфигурации</h3>
 <p>
 Конфигурация игры дополнительно настраивается в файле "config.xml", который необходимо разместить в архиве рядом с qsp-файлом. Пример файла "config.xml":
 
@@ -742,7 +742,7 @@ AeroQSP поддерживает встраивание шрифтов в игр
 PS: По умолчанию размер экрана игры <span class="em_BLCK"><span class="emNUM">800</span>x<span class="emNUM">600</span></span> пикселей.
 
 </p>
-<a id="CяЛК"></a><h5>Примечание Aleks Versus:</h5>
+<a id="oudЕ"></a><h5>Примечание Aleks Versus:</h5>
 <blockquote>
 <p>
 AeroQSP — плеер, работающий на устаревшей и отжившей своё технологии Flash. Adobe прекратила поддержку данной технологии, что означает, что AeroQSP стало невозможно использовать. Игры AeroQSP можно пробовать запустить на <a href="https://aleksversus.github.io/howdo_faq/articles/qspider_0004#qspider_0120" style="text-decoration:none;" class="emFOLD">qSpider</a>, но это так же потребует танцев с бубнами. Лучше писать игры сразу для qSpider, не уповая на то, что он поддерживает AeroQSP.
@@ -773,13 +773,13 @@ AeroQSP — плеер, работающий на устаревшей и отж
     <div id="soderzhanije_outer">
         <div class="soderzhanije">
 <a id="informarch_soderzhanije"></a><h2>Содержание</h2>
-<a id="шlШm"></a><h3>Большой сборник полезных ссылок и закладок</h3>
+<a id="ъqна"></a><h3>Большой сборник полезных ссылок и закладок</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/zakladki_0030.html#informarch_bookmarks" style="text-decoration:none;" class="emFOLD">Сборник ссылок и закладок по QSP</a>
 </li>
 </ul>
-<a id="дхdJ"></a><h3>Что такое QSP</h3>
+<a id="КЯgР"></a><h3>Что такое QSP</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/faq_po_qsp_0001.html#informarch_faq" style="text-decoration:none;" class="emFOLD">Список наиболее часто задаваемых вопросов и ответы на них</a>
@@ -791,7 +791,7 @@ AeroQSP — плеер, работающий на устаревшей и отж
 <a href="https://aleksversus.github.io/howdo_faq/informarch/nash_put__0003.html#informarch_ourway" style="text-decoration:none;" class="emFOLD">Наш путь</a>
 </li>
 </ul>
-<a id="пХЮZ"></a><h3>Общие вопросы и решения</h3>
+<a id="Ybкф"></a><h3>Общие вопросы и решения</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html#informarch_qgen_teach" style="text-decoration:none;" class="emFOLD">Учебник по QSP для редактора QGen</a>
@@ -806,7 +806,7 @@ AeroQSP — плеер, работающий на устаревшей и отж
 <a href="https://aleksversus.github.io/howdo_faq/informarch/polka_igr_0007.html#informarch_gameshelf" style="text-decoration:none;" class="emFOLD">Полка игр</a>
 </li>
 </ul>
-<a id="ЯfЙЗ"></a><h3>Продвинутый QSP</h3>
+<a id="иbКw"></a><h3>Продвинутый QSP</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/konsol_nyj_qsp-pleer_0008.html#informarch_consoleplayer" style="text-decoration:none;" class="emFOLD">Простой консольный QSP-плеер</a>
@@ -815,7 +815,7 @@ AeroQSP — плеер, работающий на устаревшей и отж
 <a href="https://aleksversus.github.io/howdo_faq/informarch/avtomatnoe_programmirovanie_0009.html#informarch_automateprogs" style="text-decoration:none;" class="emFOLD">Автоматное программирование в QSP</a>
 </li>
 </ul>
-<a id="тедД"></a><h3>Работа в текстовом редакторе</h3>
+<a id="Фымy"></a><h3>Работа в текстовом редакторе</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_help_0010.html#informarch_txt2gam_manual" style="text-decoration:none;" class="emFOLD">TXT2GAM. Краткое руководство</a>
@@ -830,7 +830,7 @@ AeroQSP — плеер, работающий на устаревшей и отж
 <a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_for_linux_0013.html#informarch_forlinux" style="text-decoration:none;" class="emFOLD">TXT2GAM. Сборка для Linux</a>
 </li>
 </ul>
-<a id="ЦmHz"></a><h3>Вопросы по программированию</h3>
+<a id="HБыU"></a><h3>Вопросы по программированию</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/kalendar__po_metodu_schiota_julianskih_dnej_0014.html#informarch_calend_jul" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианский дней</a>
@@ -860,13 +860,13 @@ AeroQSP — плеер, работающий на устаревшей и отж
 <a href="https://aleksversus.github.io/howdo_faq/informarch/tjanem_karty_iz_kollody_0022.html#informarch_randomizer" style="text-decoration:none;" class="emFOLD">Выбор случайных вариантов - тянем карты из колоды (1.0)</a>
 </li>
 </ul>
-<a id="IЦцж"></a><h3>Обновления плеера</h3>
+<a id="ХNуA"></a><h3>Обновления плеера</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/obnovlenie_do_5.7.0_0023.html#informarch_update570" style="text-decoration:none;" class="emFOLD">Обновление QSP (5.7.0) и QGen (4.0.0b)</a>
 </li>
 </ul>
-<a id="WхTl"></a><h3>Вопросы по AeroQSP</h3>
+<a id="xBfq"></a><h3>Вопросы по AeroQSP</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html#informarch_aeroqsp_wtfit" style="text-decoration:none;" class="emFOLD">Общая информация по AeroQSP</a>
@@ -884,7 +884,7 @@ AeroQSP — плеер, работающий на устаревшей и отж
 <a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_uchebnik_0028.html#informarch_aeroqspguide" style="text-decoration:none;" class="emFOLD">Учебник по AeroQSP и QGen</a>
 </li>
 </ul>
-<a id="pбuF"></a><h3>Обзоры игр</h3>
+<a id="PxцТ"></a><h3>Обзоры игр</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/obzory_qsp-compo_2010_0029.html#informarch_compo10" style="text-decoration:none;" class="emFOLD">Обзоры игр с QSP-Compo 2010</a>
