--- a/informarch/avtomatnoe_programmirovanie_0009.html
+++ b/informarch/avtomatnoe_programmirovanie_0009.html
@@ -44,7 +44,7 @@
 Рассмотрим плюсы и минусы этих вариантов.
 
 </p>
-<a id="YжNЫ"></a><h3>Вариант 1</h3>
+<a id="lUая"></a><h3>Вариант 1</h3>
 <p>
 + Каждая локации подчиняется изначальной структуре заложенной в QSP. Описание локации в своем окне, действия в своем и код при посещении на месте.
 
@@ -65,12 +65,12 @@
 - В каждой локации будут уникальные переходы в действиях на смежные локации, которые также имеют свои «версии локации», что затрудняет навигацию по переходам между локациями. Т.е. в локации «комната1» будет действие «Выйти из комнаты»: goto «коридор1»  в локации «комната2» будет действие «Выйти из комнаты»: goto «коридор2» или может быть другой вариант и т.д. Таким образом, появляются ошибки: переходы могут либо совпасть, либо действие перехода никуда не ведет, либо отсутствует необходимое действие перехода совсем.
 
 </p>
-<a id="ёЯNf"></a><h4>Резюме по варианту 1</h4>
+<a id="ЖЧPя"></a><h4>Резюме по варианту 1</h4>
 <p>
 Неплохой подход при написании игры, но требует предварительной работы по разбивки всего сюжета на локации и в свою очередь действий внутри локации на серию локаций. А также необходимость в четком дереве (графе) переходов между локациями. Не наглядное представление, куда можно перейти из локации.
 
 </p>
-<a id="bЗMщ"></a><h3>Вариант 2</h3>
+<a id="SfмА"></a><h3>Вариант 2</h3>
 <p>
 + Число локаций соответствует задумке автора, и если комната одна в доме, то и локация «комната» одна.
 
@@ -95,7 +95,7 @@
 - И вытекающее из предыдущих плюсов и минусов, разобраться в коде, с каждым новым добавлением, становиться все сложнее, а вернуться к написанию игры через продолжительный перерыв - невозможно.
 
 </p>
-<a id="поIo"></a><h4>Резюме по варианту 2</h4>
+<a id="МЦGq"></a><h4>Резюме по варианту 2</h4>
 <p>
 Такой подход к написанию игр выбирается в большинстве случаев из-за «программирования на лету», годиться лишь для написания небольших игр и за один подход, иначе игра просто остается недописанной.
 
@@ -283,13 +283,13 @@ URL игры "Дом пустоты" http://day0.narod.ru/stat/b26.qsp
     <div id="soderzhanije_outer">
         <div class="soderzhanije">
 <a id="informarch_soderzhanije"></a><h2>Содержание</h2>
-<a id="шlШm"></a><h3>Большой сборник полезных ссылок и закладок</h3>
+<a id="ъqна"></a><h3>Большой сборник полезных ссылок и закладок</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/zakladki_0030.html#informarch_bookmarks" style="text-decoration:none;" class="emFOLD">Сборник ссылок и закладок по QSP</a>
 </li>
 </ul>
-<a id="дхdJ"></a><h3>Что такое QSP</h3>
+<a id="КЯgР"></a><h3>Что такое QSP</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/faq_po_qsp_0001.html#informarch_faq" style="text-decoration:none;" class="emFOLD">Список наиболее часто задаваемых вопросов и ответы на них</a>
@@ -301,7 +301,7 @@ URL игры "Дом пустоты" http://day0.narod.ru/stat/b26.qsp
 <a href="https://aleksversus.github.io/howdo_faq/informarch/nash_put__0003.html#informarch_ourway" style="text-decoration:none;" class="emFOLD">Наш путь</a>
 </li>
 </ul>
-<a id="пХЮZ"></a><h3>Общие вопросы и решения</h3>
+<a id="Ybкф"></a><h3>Общие вопросы и решения</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html#informarch_qgen_teach" style="text-decoration:none;" class="emFOLD">Учебник по QSP для редактора QGen</a>
@@ -316,7 +316,7 @@ URL игры "Дом пустоты" http://day0.narod.ru/stat/b26.qsp
 <a href="https://aleksversus.github.io/howdo_faq/informarch/polka_igr_0007.html#informarch_gameshelf" style="text-decoration:none;" class="emFOLD">Полка игр</a>
 </li>
 </ul>
-<a id="ЯfЙЗ"></a><h3>Продвинутый QSP</h3>
+<a id="иbКw"></a><h3>Продвинутый QSP</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/konsol_nyj_qsp-pleer_0008.html#informarch_consoleplayer" style="text-decoration:none;" class="emFOLD">Простой консольный QSP-плеер</a>
@@ -325,7 +325,7 @@ URL игры "Дом пустоты" http://day0.narod.ru/stat/b26.qsp
 <a href="https://aleksversus.github.io/howdo_faq/informarch/avtomatnoe_programmirovanie_0009.html#informarch_automateprogs" style="text-decoration:none;" class="emFOLD">Автоматное программирование в QSP</a>
 </li>
 </ul>
-<a id="тедД"></a><h3>Работа в текстовом редакторе</h3>
+<a id="Фымy"></a><h3>Работа в текстовом редакторе</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_help_0010.html#informarch_txt2gam_manual" style="text-decoration:none;" class="emFOLD">TXT2GAM. Краткое руководство</a>
@@ -340,7 +340,7 @@ URL игры "Дом пустоты" http://day0.narod.ru/stat/b26.qsp
 <a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_for_linux_0013.html#informarch_forlinux" style="text-decoration:none;" class="emFOLD">TXT2GAM. Сборка для Linux</a>
 </li>
 </ul>
-<a id="ЦmHz"></a><h3>Вопросы по программированию</h3>
+<a id="HБыU"></a><h3>Вопросы по программированию</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/kalendar__po_metodu_schiota_julianskih_dnej_0014.html#informarch_calend_jul" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианский дней</a>
@@ -370,13 +370,13 @@ URL игры "Дом пустоты" http://day0.narod.ru/stat/b26.qsp
 <a href="https://aleksversus.github.io/howdo_faq/informarch/tjanem_karty_iz_kollody_0022.html#informarch_randomizer" style="text-decoration:none;" class="emFOLD">Выбор случайных вариантов - тянем карты из колоды (1.0)</a>
 </li>
 </ul>
-<a id="IЦцж"></a><h3>Обновления плеера</h3>
+<a id="ХNуA"></a><h3>Обновления плеера</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/obnovlenie_do_5.7.0_0023.html#informarch_update570" style="text-decoration:none;" class="emFOLD">Обновление QSP (5.7.0) и QGen (4.0.0b)</a>
 </li>
 </ul>
-<a id="WхTl"></a><h3>Вопросы по AeroQSP</h3>
+<a id="xBfq"></a><h3>Вопросы по AeroQSP</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html#informarch_aeroqsp_wtfit" style="text-decoration:none;" class="emFOLD">Общая информация по AeroQSP</a>
@@ -394,7 +394,7 @@ URL игры "Дом пустоты" http://day0.narod.ru/stat/b26.qsp
 <a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_uchebnik_0028.html#informarch_aeroqspguide" style="text-decoration:none;" class="emFOLD">Учебник по AeroQSP и QGen</a>
 </li>
 </ul>
-<a id="pбuF"></a><h3>Обзоры игр</h3>
+<a id="PxцТ"></a><h3>Обзоры игр</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/obzory_qsp-compo_2010_0029.html#informarch_compo10" style="text-decoration:none;" class="emFOLD">Обзоры игр с QSP-Compo 2010</a>
