--- a/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html
+++ b/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html
@@ -51,7 +51,7 @@
 Всё есть? Смело приступаем к первому уроку!
 
 </p>
-<a id="йДaО"></a><h3>Урок первый. Создаём игру.</h3>
+<a id="nсЧз"></a><h3>Урок первый. Создаём игру.</h3>
 <p>
 Запускаем QGen. Выбираем меню "Утилиты\Настройки".
 
@@ -186,7 +186,7 @@
 Итог: в этом уроке мы научились делать начальную настройку QGen, сохранять игру, создавать игровые локации, показывать текст в поле описания, отключать неиспользуемые окна и запускать игру прямо из QGen.
 
 </p>
-<a id="yzPК"></a><h3>Урок второй. Переходы по локациям.</h3>
+<a id="БЭтW"></a><h3>Урок второй. Переходы по локациям.</h3>
 <p>
 В описании локации "Начало" удаляем строку "Привет, мир!" и пишем
 
@@ -317,7 +317,7 @@
 Итог: в этом уроке мы научились создавать действия, осуществлять переходы по локациям.
 
 </p>
-<a id="jЭuЭ"></a><h3>Урок третий. Простейшая игра с выбором</h3>
+<a id="tРpх"></a><h3>Урок третий. Простейшая игра с выбором</h3>
 <p>
 Создаём локацию "Развилка". В описании пишем:
 
@@ -366,7 +366,7 @@
 Итог: в этом уроке мы научились создавать в игре выбор, от которого зависит развитие сюжета.
 
 </p>
-<a id="зуХц"></a><h3>Урок четвертый. Переменные.</h3>
+<a id="ЁvwЛ"></a><h3>Урок четвертый. Переменные.</h3>
 <p>
 Переменные - это "память" игры.
 
@@ -379,7 +379,7 @@
 Основные действия с переменными, это запись, чтение и вывод.
 
 </p>
-<a id="HеTT"></a><h4>Запись</h4>
+<a id="хpЧA"></a><h4>Запись</h4>
 <p>
 Когда мы говорим плееру, "в переменной a будет храниться значение 5" - это запись в переменную. Также запись назвают "присваиванием", это одно и то же.
 
@@ -410,7 +410,7 @@ $строка&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Mon
 Мы записали в переменную "$строка" текстовое значение "Быть или не быть?"
 
 </p>
-<a id="иЫyn"></a><h4>Чтение</h4>
+<a id="мЯЪу"></a><h4>Чтение</h4>
 <p>
 Чаще всего, значение переменной нам требуется для нового присваивания, либо для проверки условия.
 
@@ -458,12 +458,12 @@ $вопрос&nbsp;<span class="Monokai-Operator">=</span>&nbsp;$строка&nb
 Использование переменных в условиях мы разберем в следующем уроке.
 
 </p>
-<a id="FОср"></a><h4>Вывод</h4>
+<a id="бNщр"></a><h4>Вывод</h4>
 <p>
 Для вывода используйте двойные угловые скобки, "&lt;&lt;" и "&gt;&gt;". Между двойными угловыми скобками напишите имя переменной, например "&lt;&lt;$вопрос&gt;&gt;", или "&lt;&gt;", и при выводе плеер сам подставит текущее значение переменной, при этом угловые скобки выведены на экран не будут.
 
 </p>
-<a id="ALИA"></a><h4>Применяем знания</h4>
+<a id="pэпB"></a><h4>Применяем знания</h4>
 <p>
 Начнем применять переменные на практике. Создайте новую игру, назовите ее "Planet Master".
 
@@ -607,7 +607,7 @@ $Имя&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-F
 Итог: в этом уроке мы узнали, что такое переменная, как вывести значение переменной на экран, какие операции возможны с переменными.
 
 </p>
-<a id="XOтм"></a><h3>Урок пятый. Условия</h3>
+<a id="rihj"></a><h3>Урок пятый. Условия</h3>
 <p>
 Условия - самый важный и мощный инструмент в разработке текстовой игры. Автору требуется не только вести учет состояния игры(переменные), но и делать прохождение игры зависящим от изменившегося состояния. Для этих целей в QSP есть условный оператор - "IF".
 
@@ -764,7 +764,7 @@ $Имя&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-F
 Итог: в этом уроке мы научились использовать условия.
 
 </p>
-<a id="Bсbщ"></a><h3>Урок шестой. Берём предметы</h3>
+<a id="rыzК"></a><h3>Урок шестой. Берём предметы</h3>
 <p>
 В текстовых играх часто применяются предметы. Для того, чтобы игрок всегда знал, какие предметы у него с собой, в QSP есть специальное окно инвентаря(с заголовком "Предметы"). Когда игрок берет предмет, тот появляется в инвентаре.
 
@@ -910,7 +910,7 @@ $Имя&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-F
 Итог: в этом уроке мы научились брать предметы тремя способами - без ограничений, с ограничением по количеству, и однократно.
 
 </p>
-<a id="sEsS"></a><h3>Урок седьмой. Применение предметов</h3>
+<a id="ТЁaL"></a><h3>Урок седьмой. Применение предметов</h3>
 <p>
 Основной способ сделать "применение" предмета в игре - создать действие, которое будет доступно только при наличии предмета в инвентаре. Рассмотрим на примере.
 
@@ -1071,13 +1071,13 @@ PL - оператор вывода текста в окно дополнител
     <div id="soderzhanije_outer">
         <div class="soderzhanije">
 <a id="informarch_soderzhanije"></a><h2>Содержание</h2>
-<a id="шlШm"></a><h3>Большой сборник полезных ссылок и закладок</h3>
+<a id="ъqна"></a><h3>Большой сборник полезных ссылок и закладок</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/zakladki_0030.html#informarch_bookmarks" style="text-decoration:none;" class="emFOLD">Сборник ссылок и закладок по QSP</a>
 </li>
 </ul>
-<a id="дхdJ"></a><h3>Что такое QSP</h3>
+<a id="КЯgР"></a><h3>Что такое QSP</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/faq_po_qsp_0001.html#informarch_faq" style="text-decoration:none;" class="emFOLD">Список наиболее часто задаваемых вопросов и ответы на них</a>
@@ -1089,7 +1089,7 @@ PL - оператор вывода текста в окно дополнител
 <a href="https://aleksversus.github.io/howdo_faq/informarch/nash_put__0003.html#informarch_ourway" style="text-decoration:none;" class="emFOLD">Наш путь</a>
 </li>
 </ul>
-<a id="пХЮZ"></a><h3>Общие вопросы и решения</h3>
+<a id="Ybкф"></a><h3>Общие вопросы и решения</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html#informarch_qgen_teach" style="text-decoration:none;" class="emFOLD">Учебник по QSP для редактора QGen</a>
@@ -1104,7 +1104,7 @@ PL - оператор вывода текста в окно дополнител
 <a href="https://aleksversus.github.io/howdo_faq/informarch/polka_igr_0007.html#informarch_gameshelf" style="text-decoration:none;" class="emFOLD">Полка игр</a>
 </li>
 </ul>
-<a id="ЯfЙЗ"></a><h3>Продвинутый QSP</h3>
+<a id="иbКw"></a><h3>Продвинутый QSP</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/konsol_nyj_qsp-pleer_0008.html#informarch_consoleplayer" style="text-decoration:none;" class="emFOLD">Простой консольный QSP-плеер</a>
@@ -1113,7 +1113,7 @@ PL - оператор вывода текста в окно дополнител
 <a href="https://aleksversus.github.io/howdo_faq/informarch/avtomatnoe_programmirovanie_0009.html#informarch_automateprogs" style="text-decoration:none;" class="emFOLD">Автоматное программирование в QSP</a>
 </li>
 </ul>
-<a id="тедД"></a><h3>Работа в текстовом редакторе</h3>
+<a id="Фымy"></a><h3>Работа в текстовом редакторе</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_help_0010.html#informarch_txt2gam_manual" style="text-decoration:none;" class="emFOLD">TXT2GAM. Краткое руководство</a>
@@ -1128,7 +1128,7 @@ PL - оператор вывода текста в окно дополнител
 <a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_for_linux_0013.html#informarch_forlinux" style="text-decoration:none;" class="emFOLD">TXT2GAM. Сборка для Linux</a>
 </li>
 </ul>
-<a id="ЦmHz"></a><h3>Вопросы по программированию</h3>
+<a id="HБыU"></a><h3>Вопросы по программированию</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/kalendar__po_metodu_schiota_julianskih_dnej_0014.html#informarch_calend_jul" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианский дней</a>
@@ -1158,13 +1158,13 @@ PL - оператор вывода текста в окно дополнител
 <a href="https://aleksversus.github.io/howdo_faq/informarch/tjanem_karty_iz_kollody_0022.html#informarch_randomizer" style="text-decoration:none;" class="emFOLD">Выбор случайных вариантов - тянем карты из колоды (1.0)</a>
 </li>
 </ul>
-<a id="IЦцж"></a><h3>Обновления плеера</h3>
+<a id="ХNуA"></a><h3>Обновления плеера</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/obnovlenie_do_5.7.0_0023.html#informarch_update570" style="text-decoration:none;" class="emFOLD">Обновление QSP (5.7.0) и QGen (4.0.0b)</a>
 </li>
 </ul>
-<a id="WхTl"></a><h3>Вопросы по AeroQSP</h3>
+<a id="xBfq"></a><h3>Вопросы по AeroQSP</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html#informarch_aeroqsp_wtfit" style="text-decoration:none;" class="emFOLD">Общая информация по AeroQSP</a>
@@ -1182,7 +1182,7 @@ PL - оператор вывода текста в окно дополнител
 <a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_uchebnik_0028.html#informarch_aeroqspguide" style="text-decoration:none;" class="emFOLD">Учебник по AeroQSP и QGen</a>
 </li>
 </ul>
-<a id="pбuF"></a><h3>Обзоры игр</h3>
+<a id="PxцТ"></a><h3>Обзоры игр</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/obzory_qsp-compo_2010_0029.html#informarch_compo10" style="text-decoration:none;" class="emFOLD">Обзоры игр с QSP-Compo 2010</a>
