--- a/informarch/aeroqsp_instr_0025.html
+++ b/informarch/aeroqsp_instr_0025.html
@@ -45,7 +45,7 @@
 Для работы Aeroshell требуется предустановленный плагин Flash для Internet Explorer. Брать здесь: http://get.adobe.com/ru/flashplayer/otherversions
 
 </p>
-<a id="ЩАМЖ"></a><h5>Примечание Aleks Versus:</h5>
+<a id="тAqa"></a><h5>Примечание Aleks Versus:</h5>
 <blockquote>
 <p>
 AeroQSP — плеер, работающий на устаревшей и отжившей своё технологии Flash. Adobe прекратила поддержку данной технологии, что означает, что AeroQSP стало невозможно использовать. Игры AeroQSP можно пробовать запустить на <a href="https://aleksversus.github.io/howdo_faq/articles/qspider_0004#qspider_0120" style="text-decoration:none;" class="emFOLD">qSpider</a>, но это так же потребует танцев с бубнами. Лучше писать игры сразу для qSpider, не уповая на то, что он поддерживает AeroQSP.
@@ -76,13 +76,13 @@ AeroQSP — плеер, работающий на устаревшей и отж
     <div id="soderzhanije_outer">
         <div class="soderzhanije">
 <a id="informarch_soderzhanije"></a><h2>Содержание</h2>
-<a id="шlШm"></a><h3>Большой сборник полезных ссылок и закладок</h3>
+<a id="ъqна"></a><h3>Большой сборник полезных ссылок и закладок</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/zakladki_0030.html#informarch_bookmarks" style="text-decoration:none;" class="emFOLD">Сборник ссылок и закладок по QSP</a>
 </li>
 </ul>
-<a id="дхdJ"></a><h3>Что такое QSP</h3>
+<a id="КЯgР"></a><h3>Что такое QSP</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/faq_po_qsp_0001.html#informarch_faq" style="text-decoration:none;" class="emFOLD">Список наиболее часто задаваемых вопросов и ответы на них</a>
@@ -94,7 +94,7 @@ AeroQSP — плеер, работающий на устаревшей и отж
 <a href="https://aleksversus.github.io/howdo_faq/informarch/nash_put__0003.html#informarch_ourway" style="text-decoration:none;" class="emFOLD">Наш путь</a>
 </li>
 </ul>
-<a id="пХЮZ"></a><h3>Общие вопросы и решения</h3>
+<a id="Ybкф"></a><h3>Общие вопросы и решения</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html#informarch_qgen_teach" style="text-decoration:none;" class="emFOLD">Учебник по QSP для редактора QGen</a>
@@ -109,7 +109,7 @@ AeroQSP — плеер, работающий на устаревшей и отж
 <a href="https://aleksversus.github.io/howdo_faq/informarch/polka_igr_0007.html#informarch_gameshelf" style="text-decoration:none;" class="emFOLD">Полка игр</a>
 </li>
 </ul>
-<a id="ЯfЙЗ"></a><h3>Продвинутый QSP</h3>
+<a id="иbКw"></a><h3>Продвинутый QSP</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/konsol_nyj_qsp-pleer_0008.html#informarch_consoleplayer" style="text-decoration:none;" class="emFOLD">Простой консольный QSP-плеер</a>
@@ -118,7 +118,7 @@ AeroQSP — плеер, работающий на устаревшей и отж
 <a href="https://aleksversus.github.io/howdo_faq/informarch/avtomatnoe_programmirovanie_0009.html#informarch_automateprogs" style="text-decoration:none;" class="emFOLD">Автоматное программирование в QSP</a>
 </li>
 </ul>
-<a id="тедД"></a><h3>Работа в текстовом редакторе</h3>
+<a id="Фымy"></a><h3>Работа в текстовом редакторе</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_help_0010.html#informarch_txt2gam_manual" style="text-decoration:none;" class="emFOLD">TXT2GAM. Краткое руководство</a>
@@ -133,7 +133,7 @@ AeroQSP — плеер, работающий на устаревшей и отж
 <a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_for_linux_0013.html#informarch_forlinux" style="text-decoration:none;" class="emFOLD">TXT2GAM. Сборка для Linux</a>
 </li>
 </ul>
-<a id="ЦmHz"></a><h3>Вопросы по программированию</h3>
+<a id="HБыU"></a><h3>Вопросы по программированию</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/kalendar__po_metodu_schiota_julianskih_dnej_0014.html#informarch_calend_jul" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианский дней</a>
@@ -163,13 +163,13 @@ AeroQSP — плеер, работающий на устаревшей и отж
 <a href="https://aleksversus.github.io/howdo_faq/informarch/tjanem_karty_iz_kollody_0022.html#informarch_randomizer" style="text-decoration:none;" class="emFOLD">Выбор случайных вариантов - тянем карты из колоды (1.0)</a>
 </li>
 </ul>
-<a id="IЦцж"></a><h3>Обновления плеера</h3>
+<a id="ХNуA"></a><h3>Обновления плеера</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/obnovlenie_do_5.7.0_0023.html#informarch_update570" style="text-decoration:none;" class="emFOLD">Обновление QSP (5.7.0) и QGen (4.0.0b)</a>
 </li>
 </ul>
-<a id="WхTl"></a><h3>Вопросы по AeroQSP</h3>
+<a id="xBfq"></a><h3>Вопросы по AeroQSP</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html#informarch_aeroqsp_wtfit" style="text-decoration:none;" class="emFOLD">Общая информация по AeroQSP</a>
@@ -187,7 +187,7 @@ AeroQSP — плеер, работающий на устаревшей и отж
 <a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_uchebnik_0028.html#informarch_aeroqspguide" style="text-decoration:none;" class="emFOLD">Учебник по AeroQSP и QGen</a>
 </li>
 </ul>
-<a id="pбuF"></a><h3>Обзоры игр</h3>
+<a id="PxцТ"></a><h3>Обзоры игр</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/obzory_qsp-compo_2010_0029.html#informarch_compo10" style="text-decoration:none;" class="emFOLD">Обзоры игр с QSP-Compo 2010</a>
