--- a/informarch/informatsija_o_qsp_0002.html
+++ b/informarch/informatsija_o_qsp_0002.html
@@ -24,7 +24,7 @@
 Автор QSP и главный разработчик - Аргунов Валерий aka Byte. Лицензия: GNU GPL.
 
 </p>
-<a id="OрКo"></a><h3>Контакты:</h3>
+<a id="ЭлNV"></a><h3>Контакты:</h3>
 <p>
 E-mail: hzdbyte [AT] gmail.com
 
@@ -37,12 +37,12 @@ ICQ: 122289012
 IRC: irc.forestnet.org, #ifrus, Byte
 
 </p>
-<a id="ЯМkы"></a><h3>Сообщество:</h3>
+<a id="quяG"></a><h3>Сообщество:</h3>
 <p>
 В настоящее время у QSP есть сообщество энтузиастов, активно участвующих в развитии платформы. Несколько человек участвует в разработке интерпретаторов и редактора игр QGen, кто-то создает свои утилиты, авторы создают новые игры, и все мы играем в игры на QSP, а также общаемся на форуме и IRC-канале платформы. Всех нас объединяет одно - любовь к текстовым играм. Мы всегда рады новичкам, присоединяйтесь!
 
 </p>
-<a id="jMDY"></a><h3>Исходный код:</h3>
+<a id="ТЧXс"></a><h3>Исходный код:</h3>
 <p>
 qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFoundation/qsp" style="text-decoration:none;" class="emFOLD">https://github.com/QSPFoundation/qsp</a>
 
@@ -82,13 +82,13 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
     <div id="soderzhanije_outer">
         <div class="soderzhanije">
 <a id="informarch_soderzhanije"></a><h2>Содержание</h2>
-<a id="шlШm"></a><h3>Большой сборник полезных ссылок и закладок</h3>
+<a id="ъqна"></a><h3>Большой сборник полезных ссылок и закладок</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/zakladki_0030.html#informarch_bookmarks" style="text-decoration:none;" class="emFOLD">Сборник ссылок и закладок по QSP</a>
 </li>
 </ul>
-<a id="дхdJ"></a><h3>Что такое QSP</h3>
+<a id="КЯgР"></a><h3>Что такое QSP</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/faq_po_qsp_0001.html#informarch_faq" style="text-decoration:none;" class="emFOLD">Список наиболее часто задаваемых вопросов и ответы на них</a>
@@ -100,7 +100,7 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
 <a href="https://aleksversus.github.io/howdo_faq/informarch/nash_put__0003.html#informarch_ourway" style="text-decoration:none;" class="emFOLD">Наш путь</a>
 </li>
 </ul>
-<a id="пХЮZ"></a><h3>Общие вопросы и решения</h3>
+<a id="Ybкф"></a><h3>Общие вопросы и решения</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html#informarch_qgen_teach" style="text-decoration:none;" class="emFOLD">Учебник по QSP для редактора QGen</a>
@@ -115,7 +115,7 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
 <a href="https://aleksversus.github.io/howdo_faq/informarch/polka_igr_0007.html#informarch_gameshelf" style="text-decoration:none;" class="emFOLD">Полка игр</a>
 </li>
 </ul>
-<a id="ЯfЙЗ"></a><h3>Продвинутый QSP</h3>
+<a id="иbКw"></a><h3>Продвинутый QSP</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/konsol_nyj_qsp-pleer_0008.html#informarch_consoleplayer" style="text-decoration:none;" class="emFOLD">Простой консольный QSP-плеер</a>
@@ -124,7 +124,7 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
 <a href="https://aleksversus.github.io/howdo_faq/informarch/avtomatnoe_programmirovanie_0009.html#informarch_automateprogs" style="text-decoration:none;" class="emFOLD">Автоматное программирование в QSP</a>
 </li>
 </ul>
-<a id="тедД"></a><h3>Работа в текстовом редакторе</h3>
+<a id="Фымy"></a><h3>Работа в текстовом редакторе</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_help_0010.html#informarch_txt2gam_manual" style="text-decoration:none;" class="emFOLD">TXT2GAM. Краткое руководство</a>
@@ -139,7 +139,7 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
 <a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_for_linux_0013.html#informarch_forlinux" style="text-decoration:none;" class="emFOLD">TXT2GAM. Сборка для Linux</a>
 </li>
 </ul>
-<a id="ЦmHz"></a><h3>Вопросы по программированию</h3>
+<a id="HБыU"></a><h3>Вопросы по программированию</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/kalendar__po_metodu_schiota_julianskih_dnej_0014.html#informarch_calend_jul" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианский дней</a>
@@ -169,13 +169,13 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
 <a href="https://aleksversus.github.io/howdo_faq/informarch/tjanem_karty_iz_kollody_0022.html#informarch_randomizer" style="text-decoration:none;" class="emFOLD">Выбор случайных вариантов - тянем карты из колоды (1.0)</a>
 </li>
 </ul>
-<a id="IЦцж"></a><h3>Обновления плеера</h3>
+<a id="ХNуA"></a><h3>Обновления плеера</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/obnovlenie_do_5.7.0_0023.html#informarch_update570" style="text-decoration:none;" class="emFOLD">Обновление QSP (5.7.0) и QGen (4.0.0b)</a>
 </li>
 </ul>
-<a id="WхTl"></a><h3>Вопросы по AeroQSP</h3>
+<a id="xBfq"></a><h3>Вопросы по AeroQSP</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html#informarch_aeroqsp_wtfit" style="text-decoration:none;" class="emFOLD">Общая информация по AeroQSP</a>
@@ -193,7 +193,7 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
 <a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_uchebnik_0028.html#informarch_aeroqspguide" style="text-decoration:none;" class="emFOLD">Учебник по AeroQSP и QGen</a>
 </li>
 </ul>
-<a id="pбuF"></a><h3>Обзоры игр</h3>
+<a id="PxцТ"></a><h3>Обзоры игр</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/obzory_qsp-compo_2010_0029.html#informarch_compo10" style="text-decoration:none;" class="emFOLD">Обзоры игр с QSP-Compo 2010</a>
