--- a/informarch/otladchik_0021.html
+++ b/informarch/otladchik_0021.html
@@ -121,7 +121,7 @@
 У команд в фигурных скобках указаны обязательные параметры, а в круглых необязательные.
 
 </p>
-<a id="УэЦч"></a><h4>Основные команды и настройки</h4>
+<a id="юыыы"></a><h4>Основные команды и настройки</h4>
 <ul>
 <li>
 <span class="em_BLCK">debugger {0 | 1}</span> - Включение/отключение отладчика
@@ -136,7 +136,7 @@
 <span class="em_BLCK">help (название команды)</span> - список команд или информация об определенной команде
 </li>
 </ul>
-<a id="gKШT"></a><h4>Список переменных для вывода</h4>
+<a id="sИYO"></a><h4>Список переменных для вывода</h4>
 <ul>
 <li>
 <span class="em_BLCK">addVar {название переменной}</span> - добавление переменной в список отображения (можно указывать несколько переменных через пробел)
@@ -151,7 +151,7 @@
 <span class="em_BLCK">clearVars</span> - очистка списка переменных
 </li>
 </ul>
-<a id="ъAЮп"></a><h4>Список логических выражений для вывода</h4>
+<a id="qмMn"></a><h4>Список логических выражений для вывода</h4>
 <ul>
 <li>
 <span class="em_BLCK">addCond {название переменной}</span> - добавление логического выражения в список отображения
@@ -166,7 +166,7 @@
 <span class="em_BLCK">clearCond</span> - очистка списка логических выражений
 </li>
 </ul>
-<a id="ЕoXЫ"></a><h4>Отладочный кусочек кода</h4>
+<a id="WgюП"></a><h4>Отладочный кусочек кода</h4>
 <ul>
 <li>
 <span class="em_BLCK">run (название переменной)</span> - Выполнение набраного кода(по умолчанию после выполнения код очищается) или кода из определенной переменной
@@ -193,7 +193,7 @@
 <span class="em_BLCK">insert {номер строки} {строка кода}</span> - вставка кода после определенной строки
 </li>
 </ul>
-<a id="nкшш"></a><h4>Сохранение и запись отладочного кода</h4>
+<a id="сТoz"></a><h4>Сохранение и запись отладочного кода</h4>
 <ul>
 <li>
 <span class="em_BLCK">save (название переменной)</span> - сохранение кода в переменную, если переменная не указана, выполняется автосохранение, по умолчанию автосохранение выполняется при каждом выполнении кода до его очистки
@@ -237,13 +237,13 @@
     <div id="soderzhanije_outer">
         <div class="soderzhanije">
 <a id="informarch_soderzhanije"></a><h2>Содержание</h2>
-<a id="шlШm"></a><h3>Большой сборник полезных ссылок и закладок</h3>
+<a id="ъqна"></a><h3>Большой сборник полезных ссылок и закладок</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/zakladki_0030.html#informarch_bookmarks" style="text-decoration:none;" class="emFOLD">Сборник ссылок и закладок по QSP</a>
 </li>
 </ul>
-<a id="дхdJ"></a><h3>Что такое QSP</h3>
+<a id="КЯgР"></a><h3>Что такое QSP</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/faq_po_qsp_0001.html#informarch_faq" style="text-decoration:none;" class="emFOLD">Список наиболее часто задаваемых вопросов и ответы на них</a>
@@ -255,7 +255,7 @@
 <a href="https://aleksversus.github.io/howdo_faq/informarch/nash_put__0003.html#informarch_ourway" style="text-decoration:none;" class="emFOLD">Наш путь</a>
 </li>
 </ul>
-<a id="пХЮZ"></a><h3>Общие вопросы и решения</h3>
+<a id="Ybкф"></a><h3>Общие вопросы и решения</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html#informarch_qgen_teach" style="text-decoration:none;" class="emFOLD">Учебник по QSP для редактора QGen</a>
@@ -270,7 +270,7 @@
 <a href="https://aleksversus.github.io/howdo_faq/informarch/polka_igr_0007.html#informarch_gameshelf" style="text-decoration:none;" class="emFOLD">Полка игр</a>
 </li>
 </ul>
-<a id="ЯfЙЗ"></a><h3>Продвинутый QSP</h3>
+<a id="иbКw"></a><h3>Продвинутый QSP</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/konsol_nyj_qsp-pleer_0008.html#informarch_consoleplayer" style="text-decoration:none;" class="emFOLD">Простой консольный QSP-плеер</a>
@@ -279,7 +279,7 @@
 <a href="https://aleksversus.github.io/howdo_faq/informarch/avtomatnoe_programmirovanie_0009.html#informarch_automateprogs" style="text-decoration:none;" class="emFOLD">Автоматное программирование в QSP</a>
 </li>
 </ul>
-<a id="тедД"></a><h3>Работа в текстовом редакторе</h3>
+<a id="Фымy"></a><h3>Работа в текстовом редакторе</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_help_0010.html#informarch_txt2gam_manual" style="text-decoration:none;" class="emFOLD">TXT2GAM. Краткое руководство</a>
@@ -294,7 +294,7 @@
 <a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_for_linux_0013.html#informarch_forlinux" style="text-decoration:none;" class="emFOLD">TXT2GAM. Сборка для Linux</a>
 </li>
 </ul>
-<a id="ЦmHz"></a><h3>Вопросы по программированию</h3>
+<a id="HБыU"></a><h3>Вопросы по программированию</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/kalendar__po_metodu_schiota_julianskih_dnej_0014.html#informarch_calend_jul" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианский дней</a>
@@ -324,13 +324,13 @@
 <a href="https://aleksversus.github.io/howdo_faq/informarch/tjanem_karty_iz_kollody_0022.html#informarch_randomizer" style="text-decoration:none;" class="emFOLD">Выбор случайных вариантов - тянем карты из колоды (1.0)</a>
 </li>
 </ul>
-<a id="IЦцж"></a><h3>Обновления плеера</h3>
+<a id="ХNуA"></a><h3>Обновления плеера</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/obnovlenie_do_5.7.0_0023.html#informarch_update570" style="text-decoration:none;" class="emFOLD">Обновление QSP (5.7.0) и QGen (4.0.0b)</a>
 </li>
 </ul>
-<a id="WхTl"></a><h3>Вопросы по AeroQSP</h3>
+<a id="xBfq"></a><h3>Вопросы по AeroQSP</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html#informarch_aeroqsp_wtfit" style="text-decoration:none;" class="emFOLD">Общая информация по AeroQSP</a>
@@ -348,7 +348,7 @@
 <a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_uchebnik_0028.html#informarch_aeroqspguide" style="text-decoration:none;" class="emFOLD">Учебник по AeroQSP и QGen</a>
 </li>
 </ul>
-<a id="pбuF"></a><h3>Обзоры игр</h3>
+<a id="PxцТ"></a><h3>Обзоры игр</h3>
 <ul>
 <li>
 <a href="https://aleksversus.github.io/howdo_faq/informarch/obzory_qsp-compo_2010_0029.html#informarch_compo10" style="text-decoration:none;" class="emFOLD">Обзоры игр с QSP-Compo 2010</a>
